Updated some meta information

--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "redux-modules-atom-snippets",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "redux-module snippets for Atom",
+  "keywords": [
+    "redux",
+    "redux-modules",
+    "react",
+    "snippets"
+  ],
   "repository": {
     "url": "git@github.com:mboperator/redux-modules-atom-snippets.git",
     "type": "git"
+  },
+  "engines": {
+    "atom": ">=1.0.0 <2.0.0"
   },
   "author": "Marcus Bernales <mboperator@gmail.com>",
   "license": "MIT"
